# pipeline_adventure_work

./: .env  README.md  docker-compose.yaml  pyproject.toml
ingestion/: config.py  database.py  main.py  tables.py
ingestion/extract/: extract_adventure.py  extract_generic.py
ingestion/load/: load_adventure.py
pipeline_adventure_work/: dbt_project.yml
pipeline_adventure_work/models/gold/: _schema.yml  dim_customer.sql  dim_date.sql  dim_product.sql  dim_territory.sql  fct_sales.sql
pipeline_adventure_work/models/silver/: _schema.yml  _sources.yml  stg_customer.sql  stg_person.sql  stg_product.sql  stg_sales_order_detail.sql  stg_sales_order_header.sql  stg_sales_territory.sql
sql/: Person.sql  ProductionProduct.sql  SalesCustomer.sql  SalesOrderDetail.sql  SalesOrderHeader.sql  SalesTerritory.sql
